--- a/src/style.css
+++ b/src/style.css
@@ -1,30 +1,155 @@
 @import url('https://fonts.googleapis.com/css2?family=Philosopher:wght@400;700&family=Roboto:wght@300;400;500;700&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-.container {
-    max-width: 1440px;
-    margin: 0 auto;
-    padding: 0 15px;
-}
-
-body{
+body {
     font-family: 'Roboto', sans-serif;
 }
 
-a{
+a {
     text-decoration: none;
     color: white;
 }
 
-/*---header--*/
+.container {
+    max-width: 1170px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
 
-.header{
+.row {
+    display: flex;
+    margin: 0 -15px;
+    flex-wrap: wrap;
+}
 
+.col-4 {
+    width: 33.3333%;
+    padding: 15px 15px;
+}
+
+.menu {
+    background-color: #E5E5E5;
+}
+
+.name-p {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 20px 25px;
+    font-family: 'Philosopher', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 25px;
+    line-height: 24px;
+    color: #150C01;
+}
+
+.desc {
+    margin: 20px 25px;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 24px;
+    color: #150C01;
+    opacity: 0.7;
+}
+
+.rating-btn {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 20px 25px;
+}
+
+.box-catalog {
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
+    border-radius: 75px 10px 10px 10px;
+    background-color: #E5E5E5;
+}
+
+img {
+    border-radius: 75px 10px 75px 0;
+    width: 100%;
+}
+
+.btn {
+    width: 36px;
+    height: 34px;
+    background: #DC780B;
+    border-radius: 5px;
+    color: #FFFFFF;
+    font-size: 24px;
+    border: none;
+    transition: .4s;
+}
+
+.btn:hover {
+    color: #DC780B;
+    background-color: #E5E5E5;
+    border: 1px solid #DC780B;
+}
+
+.heading {
+    text-align: center;
+}
+
+.title {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.2em;
+    text-transform: uppercase;
+    color: #DC780B;
+    opacity: 0.7;
+}
+
+.subtitle {
+    font-family: 'Philosopher', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 31px;
+    line-height: 24px;
+    color: #150C01;
+    margin: 9px 0 25px;
 
 }
 
+.desc-title {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 24px;
+    color: #150C01;
+    opacity: 0.7;
+    margin-bottom: 30px;
+}
+
+.BtnLearn {
+    text-align: center;
+}
+
+.btn-learn {
+    margin: 50px 0 20px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    color: #DC780B;
+    background: #E5E5E5;
+    padding: 12px 30px;
+    border: 2px solid rgba(220, 120, 11, 0.25);
+    box-sizing: border-box;
+    border-radius: 5px;
+    transition: .4s;
+}
+
+.btn-learn:hover {
+    color: #E5E5E5;
+    background-color: #DC780B;
+}
